css/index.scss
// Variables

$color__black: #1d1d1d;
$color__deep-black: #000;
$color__white: #fff;
$color__green: #43a647;
$color__blue: #2f74ba;

$size__nav-icon: 25px;
$size__max-width: 1000px;
$size__image-base-width: 300px;

* {
	margin: 0;
	padding: 0;
	color: $color__black;
	text-decoration: none;
	box-sizing: border-box;
	outline: none
}

body {
	font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
	font-size: 20px;
  background: $color__white
}

header {
  position: fixed;
  width: 100%;
  background: rgba($color__deep-black, .85);
  -webkit-backdrop-filter: blur(20px);
	backdrop-filter: blur(20px);
	-webkit-user-select: none;
	-moz-user-select: none;
  user-select: none;
  z-index: 2;
  
  input[type=checkbox] {
    display: none;

    &:checked {
      & + nav {
        background: $color__deep-black;

        label {
          span:before {
            transform: translateY(.255em) rotate(45deg)
          }

          span:after {
            transform: translateY(-.255em) rotate(-45deg)
          }
        }

        ul {
          max-height: 100vh
        }
      }
    }
  }

  nav {
    position: relative;
    text-align: center;
    transition: background-color .2s ease-in-out;

    & > a {
      margin: 0 auto;
      padding: .5em;
      display: inline-block;

      img {
        height: 1.5em;
        vertical-align: bottom
      }
    }
  }

  label {
    top: 0;
    left: .5em;
    position: absolute;
    padding: .5em;
    width: $size__nav-icon;
    height: 1.5em;
    transition: transform .2s ease-in-out;
    box-sizing: content-box;

    span {
      position: relative;
      width: 100%;
      height: 100%;
      display: block;

      &:before, &:after {
        left: 0;
        position: absolute;
        width: 100%;
        height: 2px;
        background: $color__white;
        content: "";
        transition: all .2s ease-in-out
      }

      &:before {
        top: 30%;
        transform-origin: 50% 30%
      }

      &:after {
        top: 62.5%;
        transform-origin: 50% 62.5%
      }
    }
  }

  ul {
    position: absolute;
    padding: 0 20vw;
    width: 100%;
    height: 100vh;
    max-height: 0;
    font-size: .8em;
    text-align: left;
    background: $color__deep-black;
    list-style: none;
    overflow: hidden;
    transition: max-height .2s ease-in-out;

    li {
      border-bottom: 1px solid rgba($color__white, .25);

      &:first-child {
        margin-top: 2em
      }

      &:last-child {
        margin-bottom: 2em;
        border: none
      }
    }

    a {
      padding: 1em 0;
      color: $color__white;
      font-weight: 300;
      text-transform: uppercase;
      display: block;
      transition: color .2s ease-in-out;

      &:hover {
        color: $color__green
      }
    }
  }
}

main {
  padding-top: 2em;

  section {
    margin-bottom: 1em;
    padding: 1em;
    background: darken($color__white, 5%);

    div {
      text-align: center
    }

    h1 {
      margin-bottom: .2em;
      font-size: 1.5em;
      font-weight: 600;
      line-height: 1
    }

    h2 {
      font-size: 1em;
      font-weight: 400
    }

    span {
      margin: 1em 0;
      color: $color__blue;
      font-size: .8em;
      font-weight: 400;
      display: block;

      &:after {
        bottom: .3em;
        margin-left: .4em;
        width: 12px;
        height: 12px;
        content: "";
        background: url("/images/link_arrow.svg") no-repeat center center;
        display: inline-block
      }
    }

    img {
      width: 100%
    }
  }

  article {
    margin: 0 auto;
    padding: 2em 1em;
    max-width: $size__max-width;
    text-align: center;

    h1 {
      font-size: 2em;
      font-weight: 600;
    }

    h2 {
      font-size: 1.5em;
      font-weight: 400;
    }

    h3, p, ul {
      font-weight: 300;
      text-align: left
    }

    h3 {
      padding-top: .5em;
      font-size: 1.5em
    }

    h4 {
      padding-top: .5em;
      font-size: 1em;
      font-weight: 400
    }

    img {
      margin: 2em 0;
      width: 100%
    }

    p, ul {
      margin: 1em 0;
      line-height: 1.5
    }

    input[type=button] {
      display: none
    }

    label {
      margin: 2em 0;
      color: lighten($color__black, 40%);
      font-size: .8em;
      font-weight: 300;
      display: block;
      cursor: pointer;

      &:hover {
        color: $color__black
      }

      &:after {
        margin: .5em auto 0 auto;
        width: 32px;
        height: 32px;
        content: "";
        background: url("/images/gallery_button.svg") no-repeat center center;
        display: block
      }
    }

    ul {
      margin-left: 1em;
      list-style: none;

      li:before {
        width: 4px;
        height: 4px;
        content: "";
        background: $color__black;
        border-radius: 50%;
        display: inline-block;
        transform: translate(-.5em, -.25em)
      }
    }

    figure {
      margin-bottom: 1em;

      img {
        margin: 0
      }

      figcaption {
        font-size: .8em;
        font-weight: 300
      }
    }

    iframe {
      margin-top: 1em;
      width: 100%;
      height: 47.25vw;
      border: none;
      border-radius: 10px
    }

    hr {
      height: 1px;
      background: darken($color__white, 20%);
      border: none
    }
  }
}

footer {
  padding: 2em;
  font-size: .5em;
  text-align: center;
  background: darken($color__white, 5%);
  // border-top: 1px solid darken($color__white, 20%);

  a, p {
    color: lighten($color__black, 40%)
  }

  a:hover {
    color: $color__black
  }

  & > div > a {
    text-transform: uppercase
  }

  div div {
    display: flex
  }

  ul {
    margin: 2em 0;
    text-align: left;
    line-height: 2;
    width: 50%;
    list-style: none
  }

  p {
    padding-top: 2em;
    border-top: 1px solid darken($color__white, 20%)
  }
}

// Classes

.nav-li-active a {
  color: $color__green
}

.section-image-maxteamer {
  text-align: center;

  img {
    max-width: $size__image-base-width * 2
  }
}

.section-image-soulmat img {
  max-width: $size__image-base-width * 2;
  transform: translateX(-1em);
  z-index: 1
}

.section-image-kirby {
  text-align: center;

  img {
    width: 60%;
    max-width: $size__image-base-width
  }
}

.section-contact {
  background: $color__white;

  a {
    font-weight: 600
  }
}

.article-img-maxteamer {
  max-width: $size__image-base-width * 1.5
}

.article-img-soulmat {
  max-width: $size__image-base-width * 4;
  transform: translateX(-1em)
}

.article-img-kirby {
  max-width: $size__image-base-width / 2
}

.p-introduction {
  text-align: center
}

.article-text {
  text-align: left;

  a {
    font-weight: 400
  }
}

.article-about {
  h3 {
    margin-bottom: .5em
  }

  figure {
    margin: .25em;
    display: inline-block;

    img {
      width: 169px;
      border-radius: 10px
    }
  }
}

.a-link-blue {
  color: $color__blue;
  font-weight: 300;;
  display: block;

  &:after {
    bottom: .3em;
    margin-left: .3em;
    width: 12px;
    height: 12px;
    content: "";
    background: url("/images/link_arrow.svg") no-repeat center center;
    display: inline-block
  }
}

.a-mail:after {
  content: attr(data-name) "@" attr(data-domain) "." attr(data-tld)
}

.span-uppercase {
  text-transform: uppercase
}

// IDs

#div-gallery {
  top: 0;
  left: 0;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background: $color__white;
  display: none;
  z-index: 3;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;

  label {
    margin: 0;
    position: absolute;
    width: 32px;
    height: 32px;
    background-repeat: no-repeat;
    background-position: center center;

    &:after {
      background: none
    }
  }

  ul {
    margin: 0;
    width: 100%;
    transform: translateY(50vh)
  }

  li {
    transform: translateY(-50%);
    display: none;

    &:before {
      display: none
    }

    img {
      margin: 0 auto;
      width: 100%;
      max-width: $size__image-base-width * 2;
      max-height: 100vh;
      object-fit: contain;
      display: block
    }
  }

  .li-image-visible {
    display: block
  }
}

#label-button-close-gallery {
  top: 1em;
  right: 1em;
  background-image: url("/images/gallery_close_button.svg");
  z-index: 4
}

#label-button-prev-gallery {
  bottom: 3em;
  left: 1em;
  background-image: url("/images/gallery_prev_button.svg")
}

#label-button-next-gallery {
  right: 1em;
  bottom: 3em;
  background-image: url("/images/gallery_next_button.svg")
}

// Screen Size Adaptations

@media (min-width: 1025px) {
  header {
    position: initial;

    nav {
      margin: 0 auto;
      max-width: $size__max-width;
      display: flex;
      justify-content: space-between;

      & > a {
        margin: 0
      }
    }

    label {
      display: none
    }

    ul {
      position: initial;
      padding: 0;
      width: initial;
      height: auto;
      max-height: initial;
      background: none;
      display: flex;

      li {
        padding: 1.5em 2em .5em 2em;
        border: none;

        &:first-child, &:last-child {
          margin: 0
        }

        &:last-child {
          padding-right: 0
        }

        a {
          padding: 0;
          font-size: .75em;
          text-transform: inherit
        }
      }
    }
  }

  main {
    padding: 0;

    section {
      padding: 6em 8em;

      a {
        display: flex;
        justify-content: center;
        align-items: center
      }

      div {
        margin: auto 0 auto 2em;
        text-align: left;
        order: 2
      }

      h1 {
        font-size: 2em
      }

      h2 {
        font-size: 1.5em
      }

      img {
        margin-right: 2em;
        order: 1
      }
    }

    article {
      padding-left: 6em;
      padding-right: 6em;

      iframe {
        width: 100%;
        height: 427.5px
      }
    }
  }

  footer {
    div {
      margin: 0 auto;
      max-width: $size__max-width
    }

    & > div > a {
      float: right
    }

    ul {
      width: auto
    }

    p {
      text-align: left
    }
  }

  // Classes

  .section-image-maxteamer img {
    width: $size__image-base-width * 1.5
  }

  .section-image-soulmat {
    a {
      display: initial
    }

    div {
      margin: 0;
      text-align: center
    }

    img {
      margin: 4em auto 0 auto;
      max-width: $size__image-base-width * 4;
      display: block;
      transform: none
    }
  }

  .section-contact {
    a {
      text-align: center;
      display: inherit;

      p {
        font-size: 1.5em
      }
    }
  }

  .article-image-left {
    display: flex;
    justify-content: center;
  
    div {
      margin: auto 0 auto 2em;
      text-align: left;
      order: 2
    }

    p {
      text-align: left
    }
  
    img {
      margin-right: 2em;
      object-fit: contain;
      order: 1
    }
  }

  .article-img-soulmat {
    transform: none
  }

  .article-img-kirby {
    max-width: $size__image-base-width * .75
  }

  .ul-links-primary {
    margin-right: 10em
  }

  .footer-short-page {
    bottom: 0;
    position: absolute;
    width: 100%
  }

  // IDs

  #label-button-prev-gallery, #label-button-next-gallery {
    bottom: 50vh;
    transform: translateY(50%)
  }
}

